[package]
name = "v2cydlib"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.15.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.23.1", features = [
    "esp32",
] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.6.0" }
embassy-executor = { version = "0.7.0",  features = [
    "task-arena-size-12288",
] }
embassy-time     = { version = "0.4.0",  features = ["generic-queue-8"] }
esp-hal-embassy  = { version = "0.6.0",  features = ["esp32"] }
static_cell      = { version = "2.1.0",  features = ["nightly"] }

embassy-embedded-hal = { version = "0.3.0" }
embassy-sync = { version = "0.6.2" }

embedded-hal-bus = { version = "0.3.0" }
embedded-hal = { version = "1.0.0" }
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
display-interface-spi = "0.5.0"

cyd_touch = { path = "./cyd_touch" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
