[workspace]
members = [
    "cyd_touch",
]
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "Library for CYD touch functionality"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/v2cydlib"
documentation = "https://docs.rs/cyd_touch"
readme = "README.md"
keywords = ["esp32", "touch", "embedded"]
categories = ["embedded", "hardware-support"]

[workspace.dependencies]
# Add common dependencies here that your workspace crates might share