[workspace]
members = [
    "cyd_touch",
]
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "Library for basic CYD touchscreen functionality"
edition = "2021"
license = "MIT"
repository = "https://github.com/luque667788/rustCYDtouch"
readme = "README.md"
keywords = ["esp32", "touch", "embedded"]
categories = ["embedded", "hardware-support"]

[workspace.dependencies]
# Add common dependencies here that your workspace crates might share